# pharmvar-api

./: .env.example  .gitignore  Dockerfile  README.md  dashboard.html  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt  serve_dashboard.py
app/: __init__.py  main.py
app/clients/: __init__.py  base_client.py  clinvar_client.py  ensembl_client.py
app/core/: config.py  database.py
app/models/: __init__.py  genes.py
scripts/: enhanced_api_population.py  populate_db.py  real_api_population.py
scripts/dev/: test_apis.py  test_apis_quick.py
